--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,38 +1,34 @@
+html,body {
+    margin: 0;
+    padding: 0;
+}
+
 *{
     box-sizing: border-box;
     font-family: Verdana, Tahoma, sans-serif;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+    display: block;
     height: 100vh;  
-    justify-content: center;
-    align-items: center;
+
 }
 
 #top{
     background-color: cyan;
     display: flex;
     flex-direction: column;
-    flex-grow: 2;
     width: 100%;
+    height: 50%;
     justify-content: center;
     align-items: center;
 }
 
 #bottom{
     background-color: magenta;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: stretch;
-    align-items: stretch;
     width: 100%;
-    max-height: 50vh;
-}
-
-.botones{
+    max-width: 100%;
+    height: 50%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -40,33 +36,26 @@
     align-items: stretch;
     flex-grow: 1;
 }
-#btn_1{
-    flex-grow: 1;
-    display: flex;
-    flex-direction: row;
-    justify-content: stretch;
-    align-items: stretch;
-}
 
 #btn_1{
     flex-grow: 1;
-    flex: 1;
-    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .lis{
     flex: 1;
-    width: 85vh;
-    height: 50vh;  
+    width: 100%;
     min-width: 50%;
-    min-height: 25vh;
-    border: .25rem rgb(0, 0, 0) solid ;
+    border: .25rem rgb(0, 0, 0) solid ;   
     display: flex;
     flex-direction: column;
-    align-content: space-around;
     justify-content: center;
-    align-items: center;
-    
+    align-content: center;
+}
+
+.btn{
+    display: flex;
 }
 
 
