--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -15,7 +15,7 @@ html,body {
 }
 
 #top{
-    background-color: cyan;
+   /* background-color: cyan; */
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -25,7 +25,7 @@ html,body {
 }
 
 #bottom{
-    background-color: magenta;
+   /* background-color: magenta;*/
     width: 100%;
     max-width: 100%;
     height: 50%;
@@ -35,13 +35,15 @@ html,body {
     justify-content: stretch;
     align-items: stretch;
     flex-grow: 1;
+    
 }
 
-#btn_1{
+.botones{
     flex-grow: 1;
     display: flex;
     flex-wrap: wrap;
 }
+
 
 .lis{
     flex: 1;
@@ -55,7 +57,54 @@ html,body {
 }
 
 .btn{
+    flex: 1;
+    width: 100%;
+    min-width: 50%;
+    border: .25rem rgb(0, 0, 0) solid ;   
+    display: inline-block;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+.btn_invis{
+    display: none;
+    flex: 1;
+    width: 100%;
+    min-width: 50%;
+    border: .25rem rgb(0, 0, 0) solid ;   
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+.btn_vis{
+    flex: 1;
+    width: 100%;
+    min-width: 50%;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+
+#btn_1{
+    background-color: #56E56F;
+}
+
+#btn_2{
+    background-color: yellow;
+}
+
+#btn_3{
+    background-color: pink; 
+}
+
+#btn_4{
+    background-color: brown;
 }
 
 
@@ -80,8 +129,23 @@ button{
     padding: 5px 10px;
 }
 
+.answer{
+    background-color:green;
+    width: 100%;
+    height: 100%;
+    padding: .35rem .75rem;
+    border: 0;
+    color: white;
+    border-radius: 3px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 5rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
-
+/*
 .checar{
     background-color:green;
     padding: 7px 12px;
@@ -91,6 +155,8 @@ button{
     border-radius: 3px;
     text-align: center;
 }
+
+
 .del{
     background-color: red;
     padding: 7px 12px;
@@ -113,3 +179,4 @@ button{
 }.itemShop{
     font-style: italic;
 }
+*/
